--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,12 @@
 # npm install @mui/material @emotion/react @emotion/styled
 # npm install @mui/icons-material
 # npm install @vis.gl/react-google-maps
-
+flask_cors
+requests
+beautifulsoup4
+python-Levenshtein
+numpy
+Shapely
+geopy
 Flask==2.3.2
 gunicorn==20.1.0
